# verl-SpeCo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.sglang  Dockerfile.vllm  README.md  REQUIRED_VERL.txt  pyproject.toml  requirements-npu.txt  requirements.txt
.github/workflows/: cpu_unit_tests.yml  gpu_unit_tests.yml  npu_example_tests.yml  npu_unit_tests.yml  pre-commit.yml  sglang_npu_unit_tests.yml  vllm_npu_unit_tests.yml
ci/: README.md  domino_gpu_smoke.py  eagle1_gpu_smoke.py  peagle_gpu_smoke.py  requirements-ci.txt  run_example_test.sh  standalone_feature_store_smoke.py
examples/: run_qwen3-8b_drafter_dflash_sglang.sh  run_qwen3-8b_drafter_dflash_vllm.sh  run_qwen3-8b_drafter_dflash_vllm_npu.sh  run_qwen3-8b_drafter_domino_peagle_separate_training.sh  run_qwen3-8b_drafter_dspark_vllm.sh  run_qwen3-8b_drafter_dspark_vllm_npu.sh  run_qwen3-8b_drafter_eagle3_sglang.sh  run_qwen3-8b_drafter_eagle3_sglang_npu.sh  run_qwen3-8b_drafter_eagle3_vllm.sh  run_qwen3-8b_drafter_eagle3_vllm_npu.sh  run_qwen3-8b_drafter_separate_training.sh
examples/data_preprocess/: geo3k.py
tests/: conftest.py
tests/compat/: test_verl_contract.py  test_verl_release_api.py
tests/config/: test_speco_config_overlay.py
tests/eagle_trainer/: run_qwen3-8b_drafter_sglang.sh  run_qwen3-8b_drafter_sglang_npu.sh
tests/examples/: test_ci_example_runner.py  test_example_scripts.py
tests/heavy/: test_runtime_dependency_contract.py
tests/special_sanity/: check_api_docs.py  (+16 more)
verl_speco/: __init__.py  draft_train.py  draft_train_launcher.py  inspect_feature_store.py  main.py
(+130 files in other folders)
