[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verl-speco"
dynamic = ["version"]
description = "Speculative decoding co-training extensions for verl"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "verl-SpeCo contributors" }]
dependencies = [
    "hydra-core>=1.3.2,<1.4",
    "omegaconf>=2.3.0,<2.4",
    "packaging>=24",
]

[project.urls]
Repository = "https://github.com/verl-project/verl-SpeCo"

[project.scripts]
verl-speco = "verl_speco.main:main"
verl-speco-draft-train = "verl_speco.draft_train_launcher:main"
verl-speco-inspect-features = "verl_speco.inspect_feature_store:main"

[tool.setuptools.dynamic]
version = { attr = "verl_speco.__version__" }

[tool.setuptools.packages.find]
include = ["verl_speco*"]

[tool.setuptools.package-data]
verl_speco = ["config/*.yaml"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
